# lessonplan-scheduler

./: .gitignore  README.md  docker-compose.yml
algorithm/: CMakeLists.txt
algorithm/include/algorithm/: LessonplanScheduler.h
algorithm/src/: GenAlgorithm.cpp  GenAlgorithm.h  LessonplanGenAlgorithm.cpp  LessonplanGenAlgorithm.h  LessonplanGenAlgorithm.hpp  LessonplanScheduler.cpp
backend/: .gitignore  Dockerfile  LessonplanScheduler.pxd  README.md  algorithm.pyx  main.py  requirements.txt  schema.py  setup.py
backend/algorithm/: .gitignore  CMakeLists.txt  LessonplanScheduler.pxd  algorithm.pyx  setup.py
backend/algorithm/include/algorithm/: LessonplanScheduler.hpp
backend/algorithm/src/: GenAlgorithm.cpp  GenAlgorithm.hpp  LessonplanGenAlgorithm.cpp  LessonplanGenAlgorithm.hpp  LessonplanScheduler.cpp
backend/auth/: urls.py  views.py
backend/backend/: settings.py  urls.py
backend/lessonplans/: apps.py  models.py  schema.py  serializers.py  urls.py  views.py  views_neo4j.py
backend/lessonplans/algorithm/: .gitignore  CMakeLists.txt  LessonplanScheduler.pxd  LessonplanSchedulingAlgorithm.pxd  LessonplanSchedulingGeneticAlgorithm.pxd  LessonplanSchedulingProblem.pxd  LessonplanSchedulingProblemProperties.pxd  LessonplanSchedulingRandomSearchAlgorithm.pxd  LessonplanSchedulingSolution.pxd  SchedulingEvolutionalSolution.pxd  SchedulingGeneticAlgorithm.pxd  SchedulingGreedyAlgorithm.pxd  SchedulingProblem.pxd  SchedulingProblemProperties.pxd  SchedulingRandomSearchAlgorithm.pxd  SchedulingSolution.pxd  algorithm.pyx  setup.py
backend/lessonplans/algorithm/include/algorithm/: LessonplanScheduler.hpp  LessonplanSchedulingAlgorithm.hpp  LessonplanSchedulingGeneticAlgorithm.hpp  LessonplanSchedulingProblem.hpp  LessonplanSchedulingProblemProperties.hpp  LessonplanSchedulingRandomSearchAlgorithm.hpp  LessonplanSchedulingSolution.hpp  SchedulingEvolutionalSolution.hpp  SchedulingGeneticAlgorithm.hpp  SchedulingGreedyAlgorithm.hpp  SchedulingProblem.hpp  SchedulingProblemProperties.hpp  SchedulingRandomSearchAlgorithm.hpp  SchedulingSolution.hpp
backend/lessonplans/algorithm/include/algorithm/genetic/: SchedulingGeneticAlgorithm.hpp
backend/lessonplans/algorithm/include/algorithm/greedy/: SchedulingGreedyAlgorithm.hpp
backend/lessonplans/algorithm/include/algorithm/random-search/: SchedulingRandomSearchAlgorithm.hpp
backend/lessonplans/algorithm/include/lessonplan/: LessonplanIndividual.hpp  LessonplanIndividualDescriptor.hpp  LessonplanIndividualFactory.hpp  LessonplanScoreList.hpp
backend/lessonplans/algorithm/src/: GenAlgorithm.cpp  GenAlgorithm.hpp  Individual.cpp  Individual.hpp  LessonplanData.cpp  LessonplanData.hpp  LessonplanGenAlgorithm.cpp  LessonplanGenAlgorithm.hpp  LessonplanIndividual.cpp  LessonplanIndividual.hpp  LessonplanIndividualAbstractFactory.cpp  LessonplanIndividualAbstractFactory.hpp  LessonplanIndividualDescriptor.cpp  LessonplanIndividualDescriptor.hpp  LessonplanIndividualFactory.cpp  LessonplanIndividualFactory.hpp  LessonplanScheduler.cpp  LessonplanSchedulingAlgorithm.cpp  LessonplanSchedulingGeneticAlgorithm.cpp  LessonplanSchedulingProblem.cpp  LessonplanSchedulingProblem.hpp  LessonplanSchedulingProblemProperties.cpp  LessonplanSchedulingRandomSearchAlgorithm.cpp  LessonplanSchedulingSolution.cpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  SchedulingGeneticAlgorithm.cpp  SchedulingGreedyAlgorithm.cpp  SchedulingProblem.cpp  SchedulingProblemProperties.cpp  SchedulingRandomSearchAlgorithm.cpp  SchedulingSolution.cpp
backend/lessonplans/algorithm/src/algorithm/: SchedulingEvolutionalSolution.cpp  SchedulingProblem.cpp  SchedulingProblemProperties.cpp  SchedulingSolution.cpp
backend/lessonplans/algorithm/src/algorithm/genetic/: SchedulingGeneticAlgorithm.cpp
backend/lessonplans/algorithm/src/algorithm/greedy/: SchedulingGreedyAlgorithm.cpp
backend/lessonplans/algorithm/src/algorithm/random-search/: SchedulingRandomSearchAlgorithm.cpp
backend/lessonplans/algorithm/src/lessonplan/: LessonplanIndividual.cpp  LessonplanIndividualDescriptor.cpp  LessonplanIndividualFactory.cpp  LessonplanScoreList.cpp
backend/lessonplans/algorithm/src/utils/: RandomNumberGenerator.cpp
backend/lessonplans/data_validity/: data_validity.py
backend/lessonplans/migrations/: 0001_initial.py  0002_auto_20191029_0121.py  0003_auto_20191030_2236.py
backend/lessonplans/models/: __init__.py  class_model.py  lesson.py  room.py  subject.py  teacher.py  weekday.py
backend/lessonplans/models_neo4j/: class_model.py  room.py  teacher.py
backend/lessonplans/predefined_data/: classes.json  lessons.json  rooms.json  subjects.json  teachers.json  teachers_legacy.json  weekdays.json
backend/lessonplans/services/: lessonplan_generation_service.py
backend/lessonplans/test_data/high_complexity/: classes.json  subjects.json  teachers.json
backend/lessonplans/test_data/low_complexity/: classes.json
backend/lessonplans/test_data/medium_complexity/: classes.json  teachers.json
frontend/: Dockerfile  README.md  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  MainWrapper.vue  ManagementWrapper.vue  router.js  store.js
frontend/src/api/: MainApi.js  graphQuery.js
frontend/src/components/: AddNextBottomBar.vue  BackNextBottomBar.vue  FormContainer.vue  LessonplanCreatorStepper.vue  SaveDeleteBottomBar.vue
frontend/src/plugins/: vuetify.js
frontend/src/views/: AddClass.vue  AddClassList.vue  AddLesson.vue  AddLessonList.vue  AddRoom.vue  AddRoomList.vue  AddSubject.vue  AddSubjectList.vue  AddTeacher.vue  AddTeacherList.vue  Elo.vue  Generate.vue  Lessonplans.vue  Timetable.vue  TimetableRoom.vue  TimetableTeacher.vue
neo4j/: .env
